update areas admin

--- a/Areas/Admin/Views/Shared/_LayoutPageAdmin.cshtml
+++ b/Areas/Admin/Views/Shared/_LayoutPageAdmin.cshtml
@@ -53,6 +53,9 @@
                             <li class="sidebar-item">
                                 <a href="@Url.Action("Manage_Course", "HomeAdmin", new { area = "Admin" })" class="sidebar-link text-black">Khoá học</a>
                             </li>
+                            <li class="sidebar-item">
+                                <a href="@Url.Action("Manage_Invoice", "HomeAdmin", new { area = "Admin" })" class="sidebar-link text-black">Hoá đơn</a>
+                            </li>
                         </ul>
                     </li>
                     <li class="sidebar-item">
