--- a/Areas/Teacher/Views/HomeTeacher/Manage_Classes.cshtml
+++ b/Areas/Teacher/Views/HomeTeacher/Manage_Classes.cshtml
@@ -15,13 +15,13 @@
             <table class="table table-bordered">
                 <thead>
                     <tr>
-                        <th>Class ID</th>
-                        <th>Course ID</th>
-                        <th>Class Name</th>
-                        <th>Class Room</th>
-                        <th>Student Count</th>
-                        <th>Description</th>
-                        <th>Timetable ID</th>
+                        <th>Mã lớp học</th>
+                        <th>Mã khóa học</th>
+                        <th>Tên lớp học</th>
+                        <th>Phòng học</th>
+                        <th>Số lượng học viên</th>
+                        <th>Mô tả</th>
+                        <th>Mã thời khóa biểu</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -48,7 +48,7 @@
         <div class="row">
             <div class="col-md-12">
                 <a href="@Url.Action("Index", "HomeTeacher")" class="btn btn-primary">Trở lại</a>
-                <a href="@Url.Action("AddDocument", "HomeTeacher")" class="btn btn-primary">Lớp của tôi</a>
+                <a href="@Url.Action("MyClass", "HomeTeacher")" class="btn btn-primary">Lớp của tôi</a>
             </div>
         </div>
     </div>
