--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -15,73 +15,79 @@
         });
     });
 </script>
-<style>
-    body {
-        margin-top: 10px;
-        margin-bottom: 10px;
-    }
-
-    .sec {
-        min-height: auto;
-        min-width: auto;
-    }
-
-    .section1 {
-        height: 500px;
-        z-index: 1;
-        background-position: 50% 50%;
-        display: block;
-        position: relative;
-    }
-
-    .section2 {
-        height: 150px;
-        width: auto;
-    }
-
-    .sec1-left {
-        max-width: 50%;
-        padding: 0 10px 20px 10px;
-    }
-
-    .sec1-right {
-        position: relative;
-        display: block;
-    }
-
-    .section3 {
-        height: 350px;
-    }
-
-    .section4 {
-        height: 650px;
-    }
-
-    .sec section5 {
-        height: 350px;
-    }
-
-    .sec5-left {
-        min-height: auto;
-        min-width: auto;
-        max-width: 40%;
-        height: 350px;
-    }
+<head>
+    <style>
+        body {
+            margin-top: 10px;
+            background: url("~/source/section5a.png");
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
 
 
-    .sec5-right {
-        min-height: auto;
-        min-width: auto;
-        max-width: 60%;
-    }
+        .sec {
+            min-height: auto;
+            min-width: auto;
+        }
 
-    .section6 {
-        height: 150px;
-    }
-</style>
+        .section1 {
+            height: 500px;
+            z-index: 1;
+            background-position: 50% 50%;
+            display: block;
+            position: relative;
+        }
+
+        .section2 {
+            height: 150px;
+            width: auto;
+        }
+
+        .sec1-left {
+            max-width: 50%;
+            padding: 0 10px 20px 10px;
+        }
+
+        .sec1-right {
+            position: relative;
+            display: block;
+        }
+
+        .section3 {
+            height: 350px;
+        }
+
+        .section4 {
+            height: 650px;
+        }
+
+        .sec section5 {
+            height: 350px;
+        }
+
+        .sec5-left {
+            min-height: auto;
+            min-width: auto;
+            max-width: 40%;
+            height: 350px;
+        }
+
+
+        .sec5-right {
+            min-height: auto;
+            min-width: auto;
+            max-width: 60%;
+        }
+
+        .section6 {
+            height: 150px;
+        }
+    </style>
+</head>
 
 <body style="max-width:1300px">
     @* ảnh tự chuyển động *@
+
     <div class="bg-white " style="height:600px;width:100%">
         
 
