--- a/Areas/Admin/Views/HomeAdmin/Manage_Course.cshtml
+++ b/Areas/Admin/Views/HomeAdmin/Manage_Course.cshtml
@@ -28,6 +28,9 @@
         <div class="alert alert-danger text-center" role="alert" style="font-size: 20px; display: none;">
             @ViewBag.ErrorMessage
         </div>
+        <div class="alert alert-danger text-center" role="alert" style="font-size: 20px; display: none;">
+            @TempData["ErrorMessage"]
+        </div>
     </div>
     <div class="row">
         <table class="table " style="text-align:center">
@@ -81,7 +84,16 @@
         // Kiểm tra xem có thông báo lỗi không
         var errorMessage = "@ViewBag.ErrorMessage";
         if (errorMessage) {
-            
+
+            $(".alert").show();
+
+            setTimeout(function () {
+                $(".alert").hide();
+            }, 5000);
+        }
+        var errorMessage1 = "@TempData["ErrorMessage"]";
+        if (errorMessage1) {
+
             $(".alert").show();
 
             setTimeout(function () {
@@ -89,6 +101,7 @@
             }, 5000);
         }
     });
+
     var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'));
     var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
         return new bootstrap.Popover(popoverTriggerEl);
