--- a/Areas/Student/Views/HomeStudent/indexHomeStudent.cshtml
+++ b/Areas/Student/Views/HomeStudent/indexHomeStudent.cshtml
@@ -44,10 +44,15 @@
             font-weight: bold;
             text-shadow: 2px 2px 5px black;
         }
+        #scrollButton {
+            width: 45px;
+            height: 45px;
+            font-size: 15px;
+            padding: 0;
+        }
     </style>
 </head>
 <body>
-
     <!-- Header section -->
     <div class="header">
         <div class="container">
@@ -74,12 +79,19 @@
                     <div class="circle mx-auto">
                         <img src="~/source/logo.jpg" alt="Ukulele" class="img-fluid">
                     </div>
-                   
                 </div>
             </div>
         </div>
     </div>
-   
+    @*nút để lên đầu trang*@
+    <button type="button" class="btn btn-primary btn-lg rounded-circle position-fixed bottom-0 end-0 m-3" id="scrollButton">
+        <i class="fa-solid fa-chevron-up"></i>
+    </button>
+    <script>
+        $("#scrollButton").click(function () {
+            window.scrollTo({ top: 0, behavior: "smooth" });
+        });
+    </script>
     <!-- Bootstrap 5 JS -->
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
