fix bug from HomeAdmin

--- a/Areas/Admin/Views/HomeAdmin/Edit_Student_Infor.cshtml
+++ b/Areas/Admin/Views/HomeAdmin/Edit_Student_Infor.cshtml
@@ -6,7 +6,7 @@
 
 }
 <div class="row">
-    <div class="col display-5" style="text-align:center">Chỉnh sửa học viên</div>
+    <div class="col display-5" style="text-align:center">Chỉnh sửa thông tin học viên</div>
 </div>
 <Hr />
 <form class="row" action="@Url.Action("Submit_Edit_Student_Infor", "HomeAdmin", new { area = "Admin" })" method="post" id="inputForm">
