--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -204,11 +204,13 @@
         </div>
         <div class="row">
 
-            <div class="col-3 ">
-                <img src="~/source/piano.png" />
+            <div class="col-3">
+                <a href="@Url.Action("Course_Piano", "Home", new { area = "" })">
+                    <img src="~/source/piano.png" />
+                </a>
             </div>
 
-            <div class="col-3 " >
+            <div class="col-3 ">
                 <img src="~/source/piano.png" />
             </div>
 
@@ -221,7 +223,7 @@
             </div>
             @*<a class="" href="">
             <img src="~/source/logo.jpg" alt="Avatar Logo" style="height:150px;" />
-            @Html.ActionLink("  ", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+
         </a>*@
 
 
