--- a/Areas/Admin/Views/HomeAdmin/Edit_Teacher_Infor.cshtml
+++ b/Areas/Admin/Views/HomeAdmin/Edit_Teacher_Infor.cshtml
@@ -7,6 +7,11 @@
 <div class="row">
     <div class="col display-5" style="text-align:center">Chỉnh sửa thông tin giáo viên</div>
 </div>
+<div class="row">
+    <div class="alert alert-danger text-center" role="alert" style="font-size: 20px; display: none;">
+        @ViewBag.ErrorMessage
+    </div>
+</div>
 <Hr />
 <form class="row" action="@Url.Action("Submit_Edit_Teacher", "HomeAdmin", new { area = "Admin" })" id="inputForm" method="post">
     <div class="col-sm-12 col-md-6 col-xl-4 mb-3 mt-3">
@@ -86,5 +91,45 @@
     </div>
 </form>
 
+<script>
+    $(document).ready(function () {
+        var form = document.getElementById('inputForm');
+        form.addEventListener('submit', function (event) {
+            var checkInputs = document.getElementById('inputForm').querySelectorAll('input');
+            checkInputs.forEach(function (input) {
+                if (input.value.trim() === "") {
+                    event.preventDefault();
+                    input.classList.add('is-invalid');
+                }
+                else {
+                    input.classList.remove('is-invalid')
+                }
+            });
+            var checkSelects = document.getElementById('inputForm').querySelectorAll('select');
+            checkSelects.forEach(function (select) {
+                if (select.value.trim() === "") {
+                    event.preventDefault();
+                    input.classList.add('is-invalid');
+                }
+                else {
+                    input.classList.remove('is-invalid')
+                }
+            });
+        });
+    });
+</script>
+<script>
+    $(document).ready(function () {
+        // Kiểm tra xem có thông báo lỗi không
+        var errorMessage = "@ViewBag.ErrorMessage";
+        if (errorMessage) {
 
+            $(".alert").show();
+
+            setTimeout(function () {
+                $(".alert").hide();
+            }, 5000);
+        }
+    });
+</script>
 
