--- a/Areas/Admin/Views/HomeAdmin/Manage_Student.cshtml
+++ b/Areas/Admin/Views/HomeAdmin/Manage_Student.cshtml
@@ -92,7 +92,7 @@
                             <a>@Html.ActionLink("Sửa", "Edit_Student_Infor", "HomeAdmin", new { area = "Admin", maHocVien = item.Ma_hoc_vien }, new { @class = "btn btn-primary" })</a>
                             <form id="form-delete-@item.Ma_hoc_vien" action="@Url.Action("Delete_Student_Infor", "HomeAdmin", new { area = "Admin" })" method="post">
                                 <input type="hidden" name="maHocVien" value="@item.Ma_hoc_vien" />
-                                <button type="submit" class="btn btn-success">Xoá</button>
+                                <button type="submit" class="btn btn-danger">Xoá</button>
                             </form>
                         </td>
                     </tr>
