--- a/Views/Home/Course_Organ.cshtml
+++ b/Views/Home/Course_Organ.cshtml
@@ -5,5 +5,15 @@
     ViewBag.Active = "course";
 }
 
-<h2>Course_Organ</h2>
+
+<body>
+
+    <a href="@Url.Action("Course_Piano", "cource")">
+        <img src="~/source/section5a.png" style="height:150px;width:150px;" />
+
+    </a>
+</body>
+@*
+    @Html.ActionLink(" ", "Course_Piano", "Cource", null, new { @class = "image-link" });
+*@
 
