--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -18,10 +18,7 @@
 <head>
     <style>
         body {
-            margin-top: 10px;
-            background: url("~/source/section5a.png");
-            background-repeat: no-repeat;
-            background-size: cover;
+           
         }
 
 
@@ -117,6 +114,12 @@
 
     @* nói về giá trị mang lại của trung tâm *@
     <div class="sec section3">
+        <a href="">
+            <img  src="~/source/person1.png" style="height:150px;width:150px;" />
+            @Html.ActionLink(" ", "Course_Piano", "Cource", null, new { @class = "image-link" });
+
+
+        </a>
 
     </div>
 
