--- a/Areas/Student/Views/Shared/_LayoutStudent.cshtml
+++ b/Areas/Student/Views/Shared/_LayoutStudent.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -36,7 +37,7 @@
                 {
                     <li>@Html.ActionLink("Trang Chủ", "indexHomeStudent", "HomeStudent", new { area = "Student" }, new { @class = "nav-link " })</li>
                 }
-                @if (ViewBag.Action == "aboutstudent")  
+                @if (ViewBag.Action == "aboutstudent")
                 {
                     <li>@Html.ActionLink("Giới Thiệu", "AboutStudent", "HomeStudent", new { area = "Student" }, new { @class = "nav-link active" })</li>
                 }
@@ -70,7 +71,7 @@
                 {
                     <li>@Html.ActionLink("Đào Tạo", "StudyStudent", "HomeStudent", new { area = "Student" }, new { @class = "nav-link" })</li>
                 }
-               
+
                 @if (ViewBag.Active == "contactstudent")
                 {
                     <li>@Html.ActionLink("Liên Hệ", "ContactStudent", "HomeStudent", new { area = "Student" }, new { @class = "nav-link active" })</li>
@@ -96,7 +97,7 @@
                 <li class="dropdown nav-link">
                     <div class="dropdown-item d-inline-block">
                         <div role="button" id="dropdownMenuButton" data-toggle="dropdown">
-                            <span><i class="fa-regular fa-user" style="color: rgb(255 255 255 / 55%)"></i></span>
+                            <span><i class="fa-regular fa-user" style="color: rgb(255 255 255 / 55%)"></i> </span>
                         </div>
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                             @Html.ActionLink("Cài đặt tài khoản", "settingAccount", "HomeStudent", new { area = "Student" }, new { @class = "dropdown-item" })
@@ -116,14 +117,12 @@
                         <button class="micButton">
                             <svg viewBox="0 0 384 512" class="micIcon"><path d="M192 0C139 0 96 43 96 96V256c0 53 43 96 96 96s96-43 96-96V96c0-53-43-96-96-96zM64 216c0-13.3-10.7-24-24-24s-24 10.7-24 24v40c0 89.1 66.2 162.7 152 174.4V464H120c-13.3 0-24 10.7-24 24s10.7 24 24 24h72 72c13.3 0 24-10.7 24-24s-10.7-24-24-24H216V430.4c85.8-11.7 152-85.3 152-174.4V216c0-13.3-10.7-24-24-24s-24 10.7-24 24v40c0 70.7-57.3 128-128 128s-128-57.3-128-128V216z"></path></svg>
                         </button>
-
                     </div>
                 </li>
-
             </ul>
         </div>
     </nav>
-    <div class=" body-content justify-content-center " style="margin-top:80px">
+    <div class=" body-content justify-content-center " style="margin-top:70px">
         @RenderBody()
     </div>
     @Scripts.Render("~/bundles/jquery")
