--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -15,23 +15,68 @@
     <link rel="stylesheet" type="text/css" href="~/Content/Site.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 <style>
-    #box_top_head {
-        height: 35px;
-        width: 1200px;
-        margin: 0 65px 0 65px;
-        padding: 0 15px 0 15px;
-    }
-    #bar_header{
-        position:relative;
-        margin:0 0 0 0;
-        padding:0 0 0 0;
-        display:flex;
-        list-style-type:disc;
-        list-style-position:outside;
-        align-content:end;
-        text-align:right;
+    body {
+        margin-top: 10px;
+        margin-bottom: 10px;
     }
 
+    .sec {
+        min-height: auto;
+        min-width: auto;
+    }
+
+    .section1 {
+        height: 500px;
+        z-index: 1;
+        background-position: 50% 50%;
+        display: block;
+        position: relative;
+    }
+
+    .section2 {
+        height: 150px;
+        width: auto;
+    }
+
+    .sec1-left {
+        max-width: 50%;
+        padding: 0 10px 20px 10px;
+    }
+
+    .sec1-right {
+        position: relative;
+        display: block;
+    }
+
+    .section3 {
+        height: 450px;
+    }
+
+    .section4 {
+        height: 650px;
+    }
+
+    .sec section5 {
+        height: 350px;
+    }
+
+    .sec5-left {
+        min-height: auto;
+        min-width: auto;
+        max-width: 40%;
+        height: 350px;
+    }
+
+
+    .sec5-right {
+        min-height: auto;
+        min-width: auto;
+        max-width: 60%;
+    }
+
+    .section6 {
+        height: 150px;
+    }
 </style>
 
 </head>
@@ -39,7 +84,7 @@
 
 <body>
     @*  stick_top header*@
-    <div class=" container-fluid">
+    <div class=" container">
         <div class="container">
             <div class="  row justify-content-end ">
                 <div class="col " ></div>
@@ -91,13 +136,8 @@
 
     @* thanh điều hướng trên đầu dính trên header => stick_top  *@
 
-    <nav class="navbar navbar-expand-sm navbar-dark bg-black  sticky-top ">
-        <div class="container">
-            <div class="navbar-header " style="height:60px;">
-<body class="">
-    <nav class="navbar navbar-expand-sm navbar-dark bg-black  fixed-top ">
-        <div class="container-fluid">
-            <div class="navbar-header ">
+  
+
 
 
 
